# birka

./: README.md  construct.yaml  environment.yml  pyproject.toml
.github/workflows/: build-and-publish.yaml  pypi.yaml
bilaga/: __main__.py  _application.py  _main_window.py
bilaga/models/: _image.py
bilaga/widgets/: __init__.py  _image_list.py
bircher/: __init__.py  __main__.py  _bircher.py  _main_window.py  models.py  utils.py
bircher/models/: _image.py
bircher/widgets/: _consensus_image_list.py  _image_table_model.py  _image_table_view.py
birka/: __init__.py  _birka.py  models.py
birka/widgets/: _consensus_image_list.py
resources/: conda_menu_config.json
src/birka/: __init__.py  __main__.py  _birka.py  utils.py
src/birka/widgets/: __init__.py  _image_table_model.py
